--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,5 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: npm run build 
+  test:
+      runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
     - run: npm test
 
