change actions github

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,32 @@
-name: CI
+# name: CI
 
 on: [push]
 
 jobs:
-  build:
-
+  job1:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - run: npm run build 
+  job2:
+    needs: job1
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
     - run: npm test
+  job3:
+    needs: job1
+    runs-on: ubuntu-latest
+    steps:
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+  # build:
+
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   - uses: actions/checkout@v1
+  #   - run: npm run build 
+  #   - run: npm test
 
