--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,9 +18,7 @@ jobs:
     # needs: job1
     runs-on: ubuntu-latest
     steps:
-    - env:
-      GITHUB_CONTEXT: ${{ toJson(github) }}
-    - run: echo "$GITHUB_CONTEXT"
+    - run: echo "45335"
   # build:
 
   #   runs-on: ubuntu-latest
