--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,13 +6,13 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    # - uses: actions/checkout@v1
     - run: npm run build 
   job2:
     # needs: job1
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    # - uses: actions/checkout@v1
     - run: npm test
   job3:
     # needs: job1
