--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v1
-      # - run: npm ci
+      # - uses: actions/checkout@v1
+      - run: npm ci
       - run: npm run test:unit
